kafa example with filter records

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 kafka.bootstrapAddress=localhost:9092
 message.topic.name=local.topic
-custom.message.topic.name=local.custom.topic
-filtered.topic.name=filtered
-partitioned.topic.name=partitioned
+
+kafka.consumer.name=local
+kafka.polltimeout=30000
+kafka.concurrency=4
